trunk/Archive2/80/68866a32d52df7/output
main.cpp:2:1: error: unknown type name 'whcar_t'; did you mean 'wchar_t'?
whcar_t t = 'ي';
^~~~~~~
wchar_t
main.cpp:2:13: error: character too large for enclosing character literal type
whcar_t t = 'ي';
            ^
2 errors generated.
