trunk/Archive2/80/68866a32d52df7/main.cpp
#include <iostream>
whcar_t t = 'ي';

int main(){ }